# srcDiff

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  debian.cpack  listdir  src2srcdiff.cpp  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-macos.cmake  toolchain-msvc.cmake  vcpkg-configuration.json  vcpkg.json  xmlrw.cpp
src/: CMakeLists.txt  ColorDiff.cpp  ColorDiff.hpp  ExtractsrcML.cpp  LineDiff.cpp  LineDiffRange.cpp  LineDiffRange.hpp  Makefile  Methods.hpp  SAX2ColorDiff.cpp  SAX2ColorDiff.hpp  ShortestEditScript.cpp  ShortestEditScript.hpp  colordiff.cpp  colordiff.hpp  diffrw.h  maybe_usefull_later.cpp  mingw32.cpp  mingw32.hpp  shortest_edit_script.c  shortest_edit_script.h  src2srcdiff.cpp  src2srcdiff.cpp_v2  src2srcdiff.cpp_v3  src2srcdiff_v2.cpp  srcDiffChange.cpp  srcDiffChange.hpp  srcDiffComment.cpp  srcDiffComment.hpp  srcDiffCommentDiff.cpp  srcDiffCommentDiff.hpp  srcDiffCommon.cpp  srcDiffCommon.hpp  srcDiffConstants.hpp  srcDiffDiff.cpp  srcDiffDiff.hpp  srcDiffGuide.html  srcDiffMany.cpp  srcDiffMany.hpp  srcDiffMatch.cpp  (+40 more)
src/analysis/: call_profile_t.hpp  change_entity_map.hpp  class_profile_t.hpp  conditional_profile_t.hpp  conditionals_addon.hpp  counts_t.hpp  decl_stmt_profile_t.hpp  expr_stmt_profile_t.hpp  function_profile_t.hpp  if_profile_t.hpp  namespace_uri.hpp  parameter_profile_t.hpp  profile_t.cpp  profile_t.hpp  srcdiff_summary.cpp  srcdiff_summary.hpp  srcdiff_summary_handler.cpp  srcdiff_summary_handler.hpp  srcdiff_type.hpp  summarize_profile.hpp  summary_type.hpp  text_summary.hpp  type_query.cpp  type_query.hpp  unit_profile_t.hpp  versioned_string.cpp  versioned_string.hpp
src/client/: CMakeLists.txt  CmakeLists.txt.in  URIStream.cpp  URIStream.hpp  URIStream.tcc  client_options.cpp  client_options.hpp  input_source.cpp  input_source.hpp  input_source_git.cpp  input_source_git.hpp  input_source_local.cpp  input_source_local.hpp  input_source_svn.cpp  input_source_svn.hpp  options.cpp  options.hpp  srcdiff.cpp  srcdiff_input_source.cpp  srcdiff_input_source.hpp  srcdiff_input_source_git.cpp  srcdiff_input_source_git.hpp  srcdiff_input_source_local.cpp  srcdiff_input_source_local.hpp  srcdiff_input_source_svn.cpp  srcdiff_input_source_svn.hpp  srcdiff_local_input.cpp  srcdiff_local_input.hpp  srcdiff_options.cpp  srcdiff_options.hpp  srcdiff_source_input.hpp  srcdiff_svn_input.cpp  srcdiff_svn_input.hpp  uri_stream.hpp  uri_stream.tcc
src/model/: CMakeLists.txt  access_region.cpp  access_region.hpp  always_match.cpp  always_match.hpp  always_matched_construct.cpp  always_matched_construct.hpp  block.cpp  block.hpp  call.cpp  call.hpp  case.cpp  case.hpp  cast.cpp  cast.hpp  class.cpp  class.hpp  clause.cpp  clause.hpp  comment.cpp  comment.hpp  condition.cpp  condition.hpp  conditional.cpp  conditional.hpp  construct.cpp  construct.hpp  construct.txx  construct_factory.cpp  construct_factory.hpp  construct_hash.cpp  construct_hash.hpp  construct_list.cpp  construct_list.hpp  construct_utils.cpp  construct_utils.hpp  convertable_constructs.hpp  decl_stmt.cpp  decl_stmt.hpp  element.hpp  (+32 more)
src/oldclient/: CMakeLists.txt  URIStream.cpp  URIStream.hpp  client_options.cpp  client_options.hpp  srcdiff.cpp  srcdiff_options.cpp  srcdiff_options.hpp  srcdiff_uri.hpp  srcmlapps.cpp  srcmlapps.hpp  svn_io.cpp  svn_io.hpp
src/project/: CMakeLists.txt  srcdiff_macros.hpp  type_query.cpp  type_query.hpp
src/shortest_edit_script/: CMakeLists.txt  ShortestEditScript.cpp  ShortestEditScript.hpp  edit.hpp  edit_list.hpp  edit_operation.hpp  shortest_edit_script.c  shortest_edit_script.cpp  shortest_edit_script.h  shortest_edit_script.hpp  shortest_edit_script_class.cpp  shortest_edit_script_common.c  shortest_edit_script_hybrid.c  shortest_edit_script_linear_space.c  shortest_edit_script_linerar_space.c  shortest_edit_script_private.h  shortest_edit_script_quadratic_space.c  shortest_edit_script_t.cpp  shortest_edit_script_t.hpp
src/srcml/: CMakeLists.txt  Options.hpp  attribute.cpp  attribute.hpp  namespace.cpp  namespace.hpp  node.cpp  node.hpp  srcMLUtility.cpp  srcMLUtility.hpp  srcml_attribute.cpp  srcml_attribute.hpp  srcml_converter.cpp  srcml_converter.hpp  srcml_namespace.cpp  srcml_namespace.hpp  srcml_node.cpp  srcml_node.hpp  srcml_nodes.cpp  srcml_nodes.hpp  svn_io.cpp  svn_io.hpp
src/summary/: CMakeLists.txt  call_profile_t.hpp  call_sequence_summary_t.hpp  change_entity_map.hpp  class_profile_t.hpp  conditional_profile_t.hpp  conditional_summary_t.hpp  decl_stmt_profile_t.hpp  decl_stmt_summary_t.hpp  exception_profile_t.hpp  exception_summary_t.hpp  expr_profile_t.hpp  expr_stmt_calls_summary_t.hpp  expr_stmt_profile_t.hpp  expr_stmt_summary_t.hpp  function_profile_t.hpp  identifier_diff.hpp  identifier_profile_t.hpp  identifier_summary_t.hpp  identifier_utilities.hpp  if_profile_t.hpp  interchange_profile_t.hpp  interchange_summary_t.hpp  jump_summary_t.hpp  label_summary_t.hpp  macro_summary_t.hpp  move_handler.hpp  move_summary_t.hpp  parameter_profile_t.hpp  profile_t.cpp  profile_t.hpp  replace_summary_t.hpp  replacement_summary_t.hpp  srcdiff_summary.cpp  srcdiff_summary.hpp  srcdiff_type.hpp  summary_list.cpp  summary_list.hpp  summary_manip.cpp  summary_manip.hpp  (+18 more)
src/translator/: .srcdiff_match.cpp.swp  CMakeLists.txt  Methods.hpp  change.hpp  change_list.hpp  change_matcher.cpp  change_matcher.hpp  change_stream.cpp  change_stream.hpp  comment_differ.cpp  comment_differ.hpp  common_stream.cpp  common_stream.hpp  constants.hpp  convert_differ.cpp  convert_differ.hpp  differ.cpp  differ.hpp  edit_corrector.cpp  (+131 more)
test/: .gitignore  CMakeLists.txt  ExtractSource.cpp  Makefile  SAX2ExtractSource.cpp  SAX2ExtractSource.hpp  SAX2SwitchDifferences.cpp  SAX2SwitchDifferences.hpp  SwitchDifferences.cpp  build_srcDiff  changed_files  color_test  colordiff.css  diff.xml  diffonly.xsl  diffsize.xsl  extract_old_source.xsl  if1.cpp  if2.cpp  linux_test  list_1000  list_changed  order.cpp  order2.cpp  srcdiffsvnviz  srcdiffsvnvizs  srcdiffviz  srcdiffvizs  test_file  test_suite.py  xmlrw.cpp
(+481 files in other folders)
